--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,2 +1,2 @@
---- theme : name : bootstrap-3 --- {% include JB/setup %} {% include themes/bootstrap-3/default.html %} {% if jekyll.environment
-== 'production' %} {% include analytics.html %} {% endif %}
+{% include JB/setup %} {% include themes/bootstrap-3/default.html %} {% if jekyll.environment == 'production' %} {% include
+analytics.html %} {% endif %}
