--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -88,3 +88,15 @@ a {
   background: #57A957;
   border: 1px solid #4c964d;
   color: #FFF; }
+
+  .container {
+    background: brown;
+    border-radius: 3px;
+    box-shadow: 0px 2px 10px #222;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  a{
+    color: navajowhite;
+  }
