--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -14,7 +14,10 @@
   float: right; }*/
 
 /* Jekyll Bootstrap Colors */
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   color: white;
 }
 #footer {
@@ -22,51 +25,58 @@ h1, h2, h3, h4 {
 }
 
 a {
-  font-weight:bold;
+  font-weight: bold;
 }
 
-.highlighter-rouge > .highlight{
-  border-radius : 7px;
+.highlighter-rouge > .highlight {
+  border-radius: 7px;
 }
 
 .hightlight > code {
-  padding : 17px;
+  padding: 17px;
 }
-
 
 /* posts index */
 .post > h3.title {
   position: relative;
-  padding-top: 10px; }
+  padding-top: 10px;
+}
 
 .post > h3.title span.date {
   position: absolute;
   right: 0;
-  font-size: 0.9em; }
+  font-size: 0.9em;
+}
 
 .post > .more {
   margin: 10px 0;
-  text-align: left; }
+  text-align: left;
+}
 
 /* post-full*/
 .post-full .date {
   margin-bottom: 20px;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 /* tag_box */
 .tag_box {
   list-style: none;
   margin: 0;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .tag_box li {
-  line-height: 28px; }
+  line-height: 28px;
+}
 
 .tag_box li i {
-  opacity: 0.9; }
+  opacity: 0.9;
+}
 
 .tag_box.inline li {
-  float: left; }
+  float: left;
+}
 
 .tag_box a {
   padding: 3px 6px;
@@ -75,28 +85,45 @@ a {
   color: #555;
   border-radius: 3px;
   text-decoration: none;
-  border: 1px dashed #cccccc; }
+  border: 1px dashed #cccccc;
+}
 
 .tag_box a span {
   vertical-align: super;
-  font-size: 0.8em; }
+  font-size: 0.8em;
+}
 
 .tag_box a:hover {
-  background-color: #e5e5e5; }
+  background-color: #e5e5e5;
+}
 
 .tag_box a.active {
-  background: #57A957;
+  background: #57a957;
   border: 1px solid #4c964d;
-  color: #FFF; }
+  color: #fff;
+}
 
-  .container {
-    background: brown;
-    border-radius: 3px;
-    box-shadow: 0px 2px 10px #222;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.container {
+  background: brown;
+  border-radius: 3px;
+  box-shadow: 0px 2px 10px #222;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  a{
-    color: navajowhite;
-  }
+a {
+  color: navajowhite;
+}
+
+.site-tag {
+  background: red;
+  padding: 5px;
+  border-radius: 10px;
+  color: white;
+  height: 31px;
+  display: block;
+  text-align: center;
+  width: 100px;
+  margin: 5px;
+  box-shadow: 0px 0px 5px darkgrey;
+}
